--- a/style.css
+++ b/style.css
@@ -1,27 +1,3 @@
-#me{
-	width: 200px;
-	height: 250px;
-	border-radius: 50px;
-	border-style: solid;
-	border-color: black;
-	border-width: 3px;
-	padding: 3px;
-}
-#part1{
-	margin-top: 30px;
-	margin-left: 30px;
-	padding-left: 5px;
-	margin-right: 30px;
-	padding-right: 5px;
-	width: 250px;
-	float: left;
-}
-#content{
-	margin-left: 320px;
-	margin-right: 220px;
-	marker-start: 40px;
-	float:left; 
-}
 
 h1{
 	text-align: center;
@@ -31,3 +7,51 @@ h1{
 h2{
 	font-family: Times, serif;
 }
+
+p{
+	font-family: serif;
+	margin-bottom: 20px;
+}
+
+ body { 
+            background-color: #383232;
+        } 
+
+        #student{
+    		float: left;
+    		text-align: center;
+    		padding: 5px;
+			margin-top: 30px;
+			margin-left: 30px;	
+        	width: 320px;
+        	height: 100%;
+        	background-color: #383232;
+        	color: #b5b1b1;
+        }
+
+
+        #mat{
+        	float: right;
+	   		text-align: center;
+			padding: 10px;
+			border-right: 1px solid black;
+			border-left: 1px solid black;
+        	margin-top: 30px;
+        	margin-right: 280px;
+			width: 830px;
+			height: 100%;
+			background-color: #212020;
+			color: #c4c0c0;
+    	}
+
+    	#photo{
+    		border: 2px solid black;
+    		padding: 2px;
+    		margin-top: 15px;
+			border-radius: 50px;
+			width: 240px;
+    	}
+
+    	#intro{
+    		padding: 30px;
+    	}
