--- a/CSS/instruments.css
+++ b/CSS/instruments.css
@@ -14,8 +14,8 @@
 
 #mat li{
 	padding: 15px;
-	padding-top: 20px;
-	height: 340px;
+	padding-top: 0px;
+	height: 100%;
 	border: 2px solid white;
 	margin-bottom: 5px;
 	margin-top: 10px;
@@ -25,14 +25,20 @@
 	border-color: green;
 	background-color: #3b3939; 
 }
+
 .image{
-	overflow: hidden;
+
 	float: left;
-	width: 400px;
-	height: 300px;
+	width: 42%;
+	margin-top: 20px;
+	max-height: 320px;
 	margin-right: 15px; 
 }
-
+@media (max-width: 600px){
+	.image{
+		display: none;
+	}
+}
 .description{
 	margin-left: 10px;
 	display: flex;
@@ -42,13 +48,18 @@
 
 .head{
 	text-align: center;
-	margin-bottom: 5px;
+	margin-bottom: 0px;
 	margin-top: 0px;
 }
 .content{
-	margin-top: 10px;
-	margin-bottom: 0px;
+	margin-top: 0px;
+	margin-bottom: 10px;
 }
 h3{
 	text-align: center;
 }
+
+/*@media: (max-width: 500px)
+.image{
+	"";
+};*/
