--- a/CSS/theme.css
+++ b/CSS/theme.css
@@ -9,6 +9,7 @@ h1{
 	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
 	color: #e0dcdc;
+	padding-bottom: 30px;
 }
 
 h2{
@@ -16,33 +17,29 @@ h2{
 }
 
 #nav{
-	list-style-type: none;
+
+	list-style: none;
 	margin: auto;
-	padding: 0;
-	width: 60%;
-	text-align: center;
-	overflow: hidden;
-	margin-bottom: 30px;
-	border-collapse: collapse;
+	padding: 0;  /* very important removes the default setting for the list (space for the symbol)*/
+	width: 680px;
+	margin-bottom: 20px;
+	overflow: hidden; /* very imp as it ensures the next element is on the next line and not horizontally next.*/
 }
-
 #nav li{
+	
+	width: 168px;
 	float: left;
+	border: solid white;
+	border-width: 1px; 
+	text-align: center;
 }
-
-/*this to ensure whole are and not just the text is clickable*/
 #nav li a{
-	font-size: 16px;
-	display: block; 
-	width: 200px;
-	border: 1px solid white;
+	display: block;
 	color: white;
-	padding-bottom: 8px;
-	padding-top: 8px;
-	background-color: #393d39;
 	text-decoration: none;
-} 
-
+	background-color: #393d39;	
+	padding: 4px;
+}
 #nav li a:hover:not(.active){
 	background-color: #111c11;
 	color: white; 
@@ -51,3 +48,9 @@ h2{
 #nav li a.active{
 	background-color: #0f9e0d;
 }
+
+@media (max-width: 684px){
+	#nav{
+		width: 340px;
+}
+
